add slider, form background

--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Производственное предприятие РЕСУРС</title>
+	<title>Производственное предприятие "РЕСУРС"</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<header>
-		<!-- <div class="container logo">
-			<img src="images/logo.png" alt="logo">
-			<div id="product">
-				<p>Производство:</p>
-				<p>г. Санкт-Петербург, Колпино</p>
-				<p>Ижорский завод, пр. Ленина, д.1</p>
-			</div>
-
-		</div> -->
-		<div id="page-wrapper">
+	<div id="page-wrapper">
 		<header id="header">
 			<div class="container">
 				<div id="logo_information">
@@ -23,7 +14,7 @@
 						<img src="images/logo_header.png" alt="logo">
 						</div>
 					<div id="adress">
-						<img src="images/production_header.png" alt="production">
+						<img src="images/production_adress.png" alt="production">
 					</div>
 					<div id="number">
 						<p>8 800 000 00 00</p>
@@ -43,19 +34,23 @@
 			</div>
 			</div>
 		</header>
-				<img src="images/slider.png" alt="slider">
+		<div class="container">
+			<div id="slider">
+				<img src="images/slider.png" alt="">
+				<img id="form_background" src="images/form_background.png" alt="">
+				<form action="">
+					
+				</form>
+			</div>
 		</div>
 		<!-- footer -->
 		<footer class="footer">
-			<div class="footer_logo">
-				
-			</div>
+			<div class="footer_logo"></div>
 			<div class="footer_servises"></div>
 			<div class="footer_servises"></div>
 			<div class="footer_adress"></div>
 			<div class="footer_number"></div>
 		</footer>
 	</div>
-	</header>
 </body>
 </html>
