--- a/index.html
+++ b/index.html
@@ -35,12 +35,21 @@
 			</div>
 		</header>
 		<div class="container">
+
 			<div id="slider">
 				<img src="images/slider.png" alt="">
 				<img id="form_background" src="images/form_background.png" alt="">
-				<form action="">
-					
-				</form>
+				<div id="form">
+					<h2 id="slider_h2">ИЗГОТОВЛЕНИЕ ДЕТАЛЕЙ ИЗ МЕТАЛЛА ПО ВАШИМ ЧЕРТЕЖАМ</h2>
+					<p id="slider_p">В ПОИСКЕ КОМПАНИИ ПО МЕТАЛЛООБРАБОТКЕ? ОТПРАВТЕ ВАШ ЗАПРОС ДЛЯ ОЦЕНКИ СТОИМОСТИ</p>
+					<form action="">
+						<input class="form" type="name" value="ВАШЕ ИМЯ">
+						<input class="form" type="tel" value="ТЕЛЕФОН">
+						<input class="form" type="email" value="E-MAIL">
+						<input class="form" type="submit"  id="form_submit" value="ОТПРАВИТЬ">
+					</form>
+					<p id="order">* Если требуется отправить чертеж, перейдите на <a id="order_a" href="index.html">ФОРМУ ЗАКАЗА</a></p>
+				</div>
 			</div>
 		</div>
 		<!-- footer -->
