--- a/index.html
+++ b/index.html
@@ -50,6 +50,50 @@
 					</form>
 					<p id="order">* Если требуется отправить чертеж, перейдите на <a id="order_a" href="index.html">ФОРМУ ЗАКАЗА</a></p>
 				</div>
+				<div id="content">
+					<div id="content_left">
+						<div class="content_left_img">
+							<img src="images/1DSM6252.png" alt="">
+						<div class="content_right_text">
+							<p class="content_right_text_out strong">ФРЕЗЕРНЫЕ РАБОТЫ</p>
+							<img class="content_right_text_out" src="images/description_01.png" alt="">
+							<br>
+							<a class="content_right_text_out button_a" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
+						</div>
+						</div>
+						<div class="content_left_img">
+							<img src="images/1DSM6216.png" alt="">
+						<div class="content_right_text">
+							<p class="content_right_text_out strong">ТОКАРНЫЕ РАБОТЫ</p>
+							<img class="content_right_text_out" src="images/description_02.png" alt="">
+							<br>
+							<a class="content_right_text_out button_a" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
+						</div>
+						</div>
+						<div class="content_left_img">
+							<img src="images/1DSM6279.png" alt="">
+						<div class="content_right_text">
+							<p class="content_right_text_out strong">ИЗГОТОВЛЕНИЕ ДЕТАЛЕЙ<br>
+ПО ЧЕРТЕЖАМ ЗАКАЗЧИКА</p>
+							<img class="content_right_text_out" src="images/description_01.png" alt="">
+							<br>
+							<a class="content_right_text_out button_a_red" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
+						</div>
+						</div>
+						<div class="content_left_img">
+							<img src="images/Layer 37.png" alt="">
+						<div class="content_right_text">
+							<p class="content_right_text_out strong">СВАРОЧНЫЕ<br> И СБОРОЧНЫЕ РАБОТЫ</p>
+							<img class="content_right_text_out" src="images/description_01.png" alt="">
+							<br>
+							<a class="content_right_text_out button_a" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
+						</div>
+						</div>
+					</div>
+					<div id="content_right">
+						
+					</div>
+				</div>
 			</div>
 		</div>
 		<!-- footer -->
