--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Производственное предприятие "РЕСУРС"</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script src="js/jquery-2.2.4.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="js/style.js"></script>
 </head>
 <body>
 	<div id="page-wrapper">
@@ -91,7 +93,22 @@
 						</div>
 					</div>
 					<div id="content_right">
-						
+						<div class="content_right_animation">
+							<p class="content_right_animation_p">НАШЕ ОБОРУДОВАНИЕ</p>
+							<a id="up"><img src="images/Shape 2.png" alt=""></a>
+							<br>
+							<img src="images/Layer 38.png" alt="" id="img">
+							<br>
+							<a id="down"><img src="images/Shape 2 copy.png" alt=""></a>
+						</div>
+						<div class="content_right_animation">
+							<p class="content_right_animation_p">НАША ПРОДУКЦИЯ</p>
+							<a id="up"><img src="images/Shape 2.png" alt=""></a>
+							<br>
+							<img src="images/Layer 39.png" alt="" id="img">
+							<br>
+							<a id="down"><img src="images/Shape 2 copy.png" alt=""></a>
+						</div>
 					</div>
 				</div>
 			</div>
