add div with a certificate altered css

--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Производственное предприятие "РЕСУРС"</title>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="js/jquery-2.2.4.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="js/style.js"></script>
 </head>
 <body>
-	<div id="page-wrapper">
+	<div id="wrapper">
 		<header id="header">
 			<div class="container">
+
+			<!-- logo, adress -->
 				<div id="logo_information">
 					<div id="logo">
 						<img src="images/logo_header.png" alt="logo">
@@ -23,6 +27,8 @@
 						<div id="call">Обратный звонок</div>
 					</div>
 				</div>
+
+				<!-- menu -->
 				<div id="primary-menu">
 				<ul>
 					<li><a href="index.html">О КОМПАНИИ</a></li>
@@ -38,6 +44,7 @@
 		</header>
 		<div class="container">
 
+					<!-- form -->
 			<div id="slider">
 				<img src="images/slider.png" alt="">
 				<img id="form_background" src="images/form_background.png" alt="">
@@ -52,67 +59,81 @@
 					</form>
 					<p id="order">* Если требуется отправить чертеж, перейдите на <a id="order_a" href="index.html">ФОРМУ ЗАКАЗА</a></p>
 				</div>
-				<div id="content">
-					<div id="content_left">
-						<div class="content_left_img">
-							<img src="images/1DSM6252.png" alt="">
-						<div class="content_right_text">
-							<p class="content_right_text_out strong">ФРЕЗЕРНЫЕ РАБОТЫ</p>
-							<img class="content_right_text_out" src="images/description_01.png" alt="">
-							<br>
-							<a class="content_right_text_out button_a" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
-						</div>
-						</div>
-						<div class="content_left_img">
-							<img src="images/1DSM6216.png" alt="">
-						<div class="content_right_text">
-							<p class="content_right_text_out strong">ТОКАРНЫЕ РАБОТЫ</p>
-							<img class="content_right_text_out" src="images/description_02.png" alt="">
-							<br>
-							<a class="content_right_text_out button_a" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
-						</div>
-						</div>
-						<div class="content_left_img">
-							<img src="images/1DSM6279.png" alt="">
-						<div class="content_right_text">
-							<p class="content_right_text_out strong">ИЗГОТОВЛЕНИЕ ДЕТАЛЕЙ<br>
-ПО ЧЕРТЕЖАМ ЗАКАЗЧИКА</p>
-							<img class="content_right_text_out" src="images/description_01.png" alt="">
-							<br>
-							<a class="content_right_text_out button_a_red" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
-						</div>
-						</div>
-						<div class="content_left_img">
-							<img src="images/Layer 37.png" alt="">
-						<div class="content_right_text">
-							<p class="content_right_text_out strong">СВАРОЧНЫЕ<br> И СБОРОЧНЫЕ РАБОТЫ</p>
-							<img class="content_right_text_out" src="images/description_01.png" alt="">
-							<br>
-							<a class="content_right_text_out button_a" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
-						</div>
-						</div>
+			</div>
+							<!-- content -->
+			<div id="content">
+				<div id="content_left">
+					<div class="content_left_img">
+						<img src="images/1DSM6252.png" alt="">
+					<div class="content_right_text">
+						<p class="content_right_text_out strong">ФРЕЗЕРНЫЕ РАБОТЫ</p>
+						<img class="content_right_text_out" src="images/description_02.png" alt="">
+						<br>
+						<a class="content_right_text_out button_a" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
 					</div>
-					<div id="content_right">
-						<div class="content_right_animation">
-							<p class="content_right_animation_p">НАШЕ ОБОРУДОВАНИЕ</p>
-							<a id="up"><img src="images/Shape 2.png" alt=""></a>
-							<br>
-							<img src="images/Layer 38.png" alt="" id="img">
-							<br>
-							<a id="down"><img src="images/Shape 2 copy.png" alt=""></a>
-						</div>
-						<div class="content_right_animation">
-							<p class="content_right_animation_p">НАША ПРОДУКЦИЯ</p>
-							<a id="up"><img src="images/Shape 2.png" alt=""></a>
-							<br>
-							<img src="images/Layer 39.png" alt="" id="img">
-							<br>
-							<a id="down"><img src="images/Shape 2 copy.png" alt=""></a>
-						</div>
+					</div>
+					<div class="content_left_img">
+						<img src="images/1DSM6216.png" alt="">
+					<div class="content_right_text">
+						<p class="content_right_text_out strong">ТОКАРНЫЕ РАБОТЫ</p>
+						<img class="content_right_text_out" src="images/description_02.png" alt="">
+						<br>
+						<a class="content_right_text_out button_a" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
+					</div>
+					</div>
+					<div class="content_left_img">
+						<img src="images/1DSM6279.png" alt="">
+					<div class="content_right_text">
+						<p class="content_right_text_out strong">ИЗГОТОВЛЕНИЕ ДЕТАЛЕЙ<br>
+						ПО ЧЕРТЕЖАМ ЗАКАЗЧИКА</p>
+						<img class="content_right_text_out" src="images/description_01.png" alt="">
+						<br>
+						<a class="content_right_text_out button_a_red" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
+					</div>
+					</div>
+					<div class="content_left_img">
+						<img src="images/Layer 37.png" alt="">
+					<div class="content_right_text">
+						<p class="content_right_text_out strong">СВАРОЧНЫЕ<br> И СБОРОЧНЫЕ РАБОТЫ</p>
+						<img class="content_right_text_out" src="images/description_01.png" alt="">
+						<br>
+						<a class="content_right_text_out button_a" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
+					</div>
+					</div>
+				</div>
+				<div id="content_right">
+					<div class="content_right_animation">
+						<p class="content_right_animation_p">НАШЕ ОБОРУДОВАНИЕ</p>
+						<a id="up"><img src="images/Shape 2.png" alt=""></a>
+						<br>
+						<img src="images/Layer 38.png" alt="" id="img">
+						<br>
+						<a id="down"><img src="images/Shape 2 copy.png" alt=""></a>
+					</div>
+					<div class="content_right_animation">
+						<p class="content_right_animation_p">НАША ПРОДУКЦИЯ</p>
+						<a id="up"><img src="images/Shape 2.png" alt=""></a>
+						<br>
+						<img src="images/Layer 39.png" alt="" id="img">
+						<br>
+						<a id="down"><img src="images/Shape 2 copy.png" alt=""></a>
 					</div>
 				</div>
 			</div>
 		</div>
+
+							<!-- sertificate -->
+			<div class="gosts">
+				<h3 id="gost-caption">ГАРАНТИРУЕМ КАЧЕСТВО ИЗДЕЛИЙ</h3>
+				<div id="sertificate">
+					<img src="images/Layer 40.png"  alt="sertificate" id="sertificate-img">
+				</div>
+				<div id="gost-text">
+					<img src="images/1.png" alt="img" class="gost-img">
+					<img src="images/2.png" alt="img" class="gost-img">
+					<img src="images/3.png" alt="img" class="gost-img">
+				</div>
+			</div>
 		<!-- footer -->
 		<footer class="footer">
 			<div class="footer_logo"></div>
