add costumers menu

--- a/index.html
+++ b/index.html
@@ -134,6 +134,23 @@
 					<img src="images/3.png" alt="img" class="gost-img">
 				</div>
 			</div>
+			<!-- customers tab -->
+			<div class="customers">
+				<h3 class="customers_h3">НАШИ ЗАКАЗЧИКИ</h3>
+				<p class="customers_p">Предприятия крупного, среднего и точного машиностроения</p>
+				<div class="customers_menu">
+					<ul>
+						<li><a href="index.html">МАШИНОСТРОИТЕЛЬНЫЕ<br>
+							ПРЕДПРИЯТИЯ</a></li>
+						<li><a href="index.html">ПРОИЗВОДИТЕЛИ<br>
+							ПИЩЕВОЙ ПРОДУКЦИИ</a></li>
+						<li><a href="index.html">ПРЕДПРИЯТИЯ СПЕЦИАЛЬНОГО<br>
+							МАШИНОСТРОЕНИЯ</a></li>
+						<li><a href="index.html">ОБОРОННЫЕ<br>
+							ПРЕДПРИЯТИЯ</a></li>
+					</ul>
+				</div>
+			</div>
 		<!-- footer -->
 		<footer class="footer">
 			<div class="footer_logo"></div>
