add partners-img grid

--- a/index.html
+++ b/index.html
@@ -150,6 +150,30 @@
 							ПРЕДПРИЯТИЯ</a></li>
 					</ul>
 				</div>
+				<div class="partners">
+					<div class="partners_logo">
+						<div class="partners_logo_div">
+							<img src="images/Layer 26.png" alt="img" class="partners_logo_img">
+						</div>
+						<div class="partners_logo_div">
+							<img src="images/Layer 27.png" alt="img" class="partners_logo_img">
+						</div>
+						<div class="partners_logo_div">
+							<img src="images/Layer 28.png" alt="img" class="partners_logo_img">
+						</div>
+					</div>
+					<div class="partners_logo">
+						<div class="partners_logo_div">
+							<img src="images/Layer 31.png" alt="img" class="partners_logo_img">
+						</div>
+						<div class="partners_logo_div">
+							<img src="images/Layer 29.png" alt="img" class="partners_logo_img">
+						</div>
+						<div class="partners_logo_div">
+							<img src="images/Layer 30.png" alt="img" class="partners_logo_img">
+						</div>
+					</div>
+				</div>
 			</div>
 		<!-- footer -->
 		<footer class="footer">
