--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<script type="text/javascript" src="js/style.js"></script>
 </head>
 <body>
-	<div id="wrapper">
 		<header id="header">
 			<div class="container">
 
@@ -176,13 +175,30 @@
 				</div>
 			</div>
 		<!-- footer -->
-		<footer class="footer">
-			<div class="footer_logo"></div>
-			<div class="footer_servises"></div>
-			<div class="footer_servises"></div>
-			<div class="footer_adress"></div>
-			<div class="footer_number"></div>
-		</footer>
-	</div>
+			<div id="footer">
+				<div class="footer_block">
+					<img src="images/resurs_footer_logo.png" alt="img">
+				</div>
+				<div class="footer_block">
+					<a href="index.html">Механообработка деталей</a>
+					<br>
+					<a href="index.html">Токарные работы</a>
+				</div>
+				<div class="footer_block">
+					<a href="index.html">Фрезеровка деталей</a>
+					<br>
+					<a href="index.html">Фрезерный работы</a>
+				</div>
+				<div class="footer_block">
+					<p>
+						г. Санкт-Петербург, Колпино<br>
+						Ижорский завод, пр. Ленина, д.1
+					</p>
+				</div>
+				<div class="footer_block">
+					<p>8 800 000 00 00</p>
+					<p>НАПИСАТЬ ДИРЕКТОРУ</p>
+				</div>
+			</div>
 </body>
 </html>
