--- a/index.html
+++ b/index.html
@@ -1,204 +1,231 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<meta charset="UTF-8">
-	<title>Производственное предприятие "РЕСУРС"</title>
-
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script src="js/jquery-2.2.4.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="js/style.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="js/jquery-2.2.4.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/style.js"></script>
+    <title>Производственное предприятие "РЕСУРС"</title>
 </head>
 <body>
-		<header id="header">
-			<div class="container">
+    <header id="header">
+        <div class="container">
 
-			<!-- logo, adress -->
-				<div id="logo_information">
-					<div id="logo">
-						<img src="images/logo_header.png" alt="logo">
-						</div>
-					<div id="adress">
-						<img src="images/production_adress.png" alt="production">
-					</div>
-					<div id="number">
-						<p>8 800 000 00 00</p>
-						<div id="call">Обратный звонок</div>
-					</div>
-				</div>
+            <!-- logo, adress -->
+            <div id="logo_information">
+                <div id="logo">
+                    <img src="images/logo_header.png" alt="logo"></div>
+                <div id="adress">
+                    <img src="images/production_adress.png" alt="production"></div>
+                <div id="number">
+                    <p>8 800 000 00 00</p>
+                    <div id="call">Обратный звонок</div>
+                </div>
+            </div>
 
-				<!-- menu -->
-				<div id="primary-menu">
-				<ul>
-					<li><a href="index.html">О КОМПАНИИ</a></li>
-					<li><a href="index.html">ОБОРУДОВАНИЕ</a></li>
-					<li><a href="index.html">ВИДЫ РАБОТ</a></li>
-					<li><a href="index.html">ИЗДЕЛИЯ</a></li>
-					<li><a href="index.html">РЕКОМЕНДАЦИИ</a></li>
-					<li><a href="index.html">ВАКАНСИИ</a></li>
-					<li><a href="index.html">КОНТАКТЫ</a></li>
-				</ul>
-			</div>
-			</div>
-		</header>
-		<div class="container">
+            <!-- menu -->
+            <div id="primary-menu">
+                <ul>
+                    <li>
+                        <a href="index.html">О КОМПАНИИ</a>
+                    </li>
+                    <li>
+                        <a href="index.html">ОБОРУДОВАНИЕ</a>
+                    </li>
+                    <li>
+                        <a href="index.html">ВИДЫ РАБОТ</a>
+                    </li>
+                    <li>
+                        <a href="index.html">ИЗДЕЛИЯ</a>
+                    </li>
+                    <li>
+                        <a href="index.html">РЕКОМЕНДАЦИИ</a>
+                    </li>
+                    <li>
+                        <a href="index.html">ВАКАНСИИ</a>
+                    </li>
+                    <li>
+                        <a href="index.html">КОНТАКТЫ</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <div class="container">
 
-					<!-- form -->
-			<div id="slider">
-				<img src="images/slider.png" alt="">
-				<img id="form_background" src="images/form_background.png" alt="">
-				<div id="form">
-					<h2 id="slider_h2">ИЗГОТОВЛЕНИЕ ДЕТАЛЕЙ ИЗ МЕТАЛЛА ПО ВАШИМ ЧЕРТЕЖАМ</h2>
-					<p id="slider_p">В ПОИСКЕ КОМПАНИИ ПО МЕТАЛЛООБРАБОТКЕ? ОТПРАВТЕ ВАШ ЗАПРОС ДЛЯ ОЦЕНКИ СТОИМОСТИ</p>
-					<form action="">
-						<input class="form" type="name" value="ВАШЕ ИМЯ">
-						<input class="form" type="tel" value="ТЕЛЕФОН">
-						<input class="form" type="email" value="E-MAIL">
-						<input class="form" type="submit"  id="form_submit" value="ОТПРАВИТЬ">
-					</form>
-					<p id="order">* Если требуется отправить чертеж, перейдите на <a id="order_a" href="index.html">ФОРМУ ЗАКАЗА</a></p>
-				</div>
-			</div>
-							<!-- content -->
-			<div id="content">
-				<div id="content_left">
-					<div class="content_left_img">
-						<img src="images/1DSM6252.png" alt="">
-					<div class="content_right_text">
-						<p class="content_right_text_out strong">ФРЕЗЕРНЫЕ РАБОТЫ</p>
-						<img class="content_right_text_out" src="images/description_02.png" alt="">
-						<br>
-						<a class="content_right_text_out button_a" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
-					</div>
-					</div>
-					<div class="content_left_img">
-						<img src="images/1DSM6216.png" alt="">
-					<div class="content_right_text">
-						<p class="content_right_text_out strong">ТОКАРНЫЕ РАБОТЫ</p>
-						<img class="content_right_text_out" src="images/description_02.png" alt="">
-						<br>
-						<a class="content_right_text_out button_a" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
-					</div>
-					</div>
-					<div class="content_left_img">
-						<img src="images/1DSM6279.png" alt="">
-					<div class="content_right_text">
-						<p class="content_right_text_out strong">ИЗГОТОВЛЕНИЕ ДЕТАЛЕЙ<br>
-						ПО ЧЕРТЕЖАМ ЗАКАЗЧИКА</p>
-						<img class="content_right_text_out" src="images/description_01.png" alt="">
-						<br>
-						<a class="content_right_text_out button_a_red" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
-					</div>
-					</div>
-					<div class="content_left_img">
-						<img src="images/Layer 37.png" alt="">
-					<div class="content_right_text">
-						<p class="content_right_text_out strong">СВАРОЧНЫЕ<br> И СБОРОЧНЫЕ РАБОТЫ</p>
-						<img class="content_right_text_out" src="images/description_01.png" alt="">
-						<br>
-						<a class="content_right_text_out button_a" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
-					</div>
-					</div>
-				</div>
-				<div id="content_right">
-					<div class="content_right_animation">
-						<p class="content_right_animation_p">НАШЕ ОБОРУДОВАНИЕ</p>
-						<a id="up"><img src="images/Shape 2.png" alt=""></a>
-						<br>
-						<img src="images/Layer 38.png" alt="" id="img">
-						<br>
-						<a id="down"><img src="images/Shape 2 copy.png" alt=""></a>
-					</div>
-					<div class="content_right_animation">
-						<p class="content_right_animation_p">НАША ПРОДУКЦИЯ</p>
-						<a id="up"><img src="images/Shape 2.png" alt=""></a>
-						<br>
-						<img src="images/Layer 39.png" alt="" id="img">
-						<br>
-						<a id="down"><img src="images/Shape 2 copy.png" alt=""></a>
-					</div>
-				</div>
-			</div>
-		</div>
+        <!-- form -->
+        <div id="slider">
+            <img src="images/slider.png" alt="">
+            <img id="form_background" src="images/form_background.png" alt="">
+            <div id="form">
+                <h2 id="slider_h2">ИЗГОТОВЛЕНИЕ ДЕТАЛЕЙ ИЗ МЕТАЛЛА ПО ВАШИМ ЧЕРТЕЖАМ</h2>
+                <p id="slider_p">
+                    В ПОИСКЕ КОМПАНИИ ПО МЕТАЛЛООБРАБОТКЕ? ОТПРАВТЕ ВАШ ЗАПРОС ДЛЯ ОЦЕНКИ СТОИМОСТИ
+                </p>
+                <form action="">
+                    <input class="form" type="name" value="ВАШЕ ИМЯ">
+                    <input class="form" type="tel" value="ТЕЛЕФОН">
+                    <input class="form" type="email" value="E-MAIL">
+                    <input class="form" type="submit"  id="form_submit" value="ОТПРАВИТЬ"></form>
+                <p id="order">
+                    * Если требуется отправить чертеж, перейдите на
+                    <a id="order_a" href="index.html">ФОРМУ ЗАКАЗА</a>
+                </p>
+            </div>
+        </div>
+        
+        <!-- content -->
+        <div id="content">
+            <div id="content_left">
+                <div class="content_left_img">
+                    <img src="images/1DSM6252.png" alt="">
+                    <div class="content_right_text">
+                        <p class="content_right_text_out strong">ФРЕЗЕРНЫЕ РАБОТЫ</p>
+                        <img class="content_right_text_out" src="images/description_02.png" alt="">
+                        <br>
+                        <a class="content_right_text_out button_a" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
+                    </div>
+                </div>
+                <div class="content_left_img">
+                    <img src="images/1DSM6216.png" alt="">
+                    <div class="content_right_text">
+                        <p class="content_right_text_out strong">ТОКАРНЫЕ РАБОТЫ</p>
+                        <img class="content_right_text_out" src="images/description_02.png" alt="">
+                        <br>
+                        <a class="content_right_text_out button_a" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
+                    </div>
+                </div>
+                <div class="content_left_img">
+                    <img src="images/1DSM6279.png" alt="">
+                    <div class="content_right_text">
+                        <p class="content_right_text_out strong">
+                            ИЗГОТОВЛЕНИЕ ДЕТАЛЕЙ
+                            <br>ПО ЧЕРТЕЖАМ ЗАКАЗЧИКА</p>
+                        <img class="content_right_text_out" src="images/description_01.png" alt="">
+                        <br>
+                        <a class="content_right_text_out button_a_red" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
+                    </div>
+                </div>
+                <div class="content_left_img">
+                    <img src="images/Layer 37.png" alt="">
+                    <div class="content_right_text">
+                        <p class="content_right_text_out strong">
+                            СВАРОЧНЫЕ
+                            <br>И СБОРОЧНЫЕ РАБОТЫ</p>
+                        <img class="content_right_text_out" src="images/description_01.png" alt="">
+                        <br>
+                        <a class="content_right_text_out button_a" href="index.html">УЗНАТЬ БОЛЬШЕ</a>
+                    </div>
+                </div>
+            </div>
+            <div id="content_right">
+                <div class="content_right_animation">
+                    <p class="content_right_animation_p">НАШЕ ОБОРУДОВАНИЕ</p>
+                    <a id="up">
+                        <img src="images/Shape 2.png" alt=""></a>
+                    <br>
+                    <img src="images/Layer 38.png" alt="" id="img">
+                    <br>
+                    <a id="down">
+                        <img src="images/Shape 2 copy.png" alt=""></a>
+                </div>
+                <div class="content_right_animation">
+                    <p class="content_right_animation_p">НАША ПРОДУКЦИЯ</p>
+                    <a id="up">
+                        <img src="images/Shape 2.png" alt=""></a>
+                    <br>
+                    <img src="images/Layer 39.png" alt="" id="img">
+                    <br>
+                    <a id="down">
+                        <img src="images/Shape 2 copy.png" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </div>
 
-							<!-- sertificate -->
-			<div class="gosts">
-				<h3 id="gost-caption">ГАРАНТИРУЕМ КАЧЕСТВО ИЗДЕЛИЙ</h3>
-				<div id="sertificate">
-					<img src="images/Layer 40.png"  alt="sertificate" id="sertificate-img">
-				</div>
-				<div id="gost-text">
-					<img src="images/1.png" alt="img" class="gost-img">
-					<img src="images/2.png" alt="img" class="gost-img">
-					<img src="images/3.png" alt="img" class="gost-img">
-				</div>
-			</div>
-			<!-- customers tab -->
-			<div class="customers">
-				<h3 class="customers_h3">НАШИ ЗАКАЗЧИКИ</h3>
-				<p class="customers_p">Предприятия крупного, среднего и точного машиностроения</p>
-				<div class="customers_menu">
-					<ul>
-						<li><a href="index.html">МАШИНОСТРОИТЕЛЬНЫЕ<br>
-							ПРЕДПРИЯТИЯ</a></li>
-						<li><a href="index.html">ПРОИЗВОДИТЕЛИ<br>
-							ПИЩЕВОЙ ПРОДУКЦИИ</a></li>
-						<li><a href="index.html">ПРЕДПРИЯТИЯ СПЕЦИАЛЬНОГО<br>
-							МАШИНОСТРОЕНИЯ</a></li>
-						<li><a href="index.html">ОБОРОННЫЕ<br>
-							ПРЕДПРИЯТИЯ</a></li>
-					</ul>
-				</div>
-				<div class="partners">
-					<div class="partners_logo">
-						<div class="partners_logo_div">
-							<img src="images/Layer 26.png" alt="img" class="partners_logo_img">
-						</div>
-						<div class="partners_logo_div">
-							<img src="images/Layer 27.png" alt="img" class="partners_logo_img">
-						</div>
-						<div class="partners_logo_div">
-							<img src="images/Layer 28.png" alt="img" class="partners_logo_img">
-						</div>
-					</div>
-					<div class="partners_logo">
-						<div class="partners_logo_div">
-							<img src="images/Layer 31.png" alt="img" class="partners_logo_img">
-						</div>
-						<div class="partners_logo_div">
-							<img src="images/Layer 29.png" alt="img" class="partners_logo_img">
-						</div>
-						<div class="partners_logo_div">
-							<img src="images/Layer 30.png" alt="img" class="partners_logo_img">
-						</div>
-					</div>
-				</div>
-			</div>
-		<!-- footer -->
-			<div id="footer">
-				<div class="footer_block">
-					<img src="images/resurs_footer_logo.png" alt="img">
-				</div>
-				<div class="footer_block">
-					<a href="index.html">Механообработка деталей</a>
-					<br>
-					<a href="index.html">Токарные работы</a>
-				</div>
-				<div class="footer_block">
-					<a href="index.html">Фрезеровка деталей</a>
-					<br>
-					<a href="index.html">Фрезерный работы</a>
-				</div>
-				<div class="footer_block">
-					<p>
-						г. Санкт-Петербург, Колпино<br>
-						Ижорский завод, пр. Ленина, д.1
-					</p>
-				</div>
-				<div class="footer_block">
-					<p>8 800 000 00 00</p>
-					<p>НАПИСАТЬ ДИРЕКТОРУ</p>
-				</div>
-			</div>
+    <!-- sertificate -->
+    <div class="gosts">
+        <h3 id="gost-caption">ГАРАНТИРУЕМ КАЧЕСТВО ИЗДЕЛИЙ</h3>
+        <div id="sertificate">
+            <img src="images/Layer 40.png"  alt="sertificate" id="sertificate-img"></div>
+        <div id="gost-text">
+            <img src="images/1.png" alt="img" class="gost-img">
+            <img src="images/2.png" alt="img" class="gost-img">
+            <img src="images/3.png" alt="img" class="gost-img"></div>
+    </div>
+
+    <!-- customers tab -->
+    <div class="customers">
+        <h3 class="customers_h3">НАШИ ЗАКАЗЧИКИ</h3>
+        <p class="customers_p">Предприятия крупного, среднего и точного машиностроения</p>
+        <div class="customers_menu">
+            <ul>
+                <li>
+                    <a href="index.html">
+                        МАШИНОСТРОИТЕЛЬНЫЕ
+                        <br>ПРЕДПРИЯТИЯ</a>
+                </li>
+                <li>
+                    <a href="index.html">
+                        ПРОИЗВОДИТЕЛИ
+                        <br>ПИЩЕВОЙ ПРОДУКЦИИ</a>
+                </li>
+                <li>
+                    <a href="index.html">
+                        ПРЕДПРИЯТИЯ СПЕЦИАЛЬНОГО
+                        <br>МАШИНОСТРОЕНИЯ</a>
+                </li>
+                <li>
+                    <a href="index.html">
+                        ОБОРОННЫЕ
+                        <br>ПРЕДПРИЯТИЯ</a>
+                </li>
+            </ul>
+        </div>
+        <div class="partners">
+            <div class="partners_logo">
+                <div class="partners_logo_div">
+                    <img src="images/Layer 26.png" alt="img" class="partners_logo_img"></div>
+                <div class="partners_logo_div">
+                    <img src="images/Layer 27.png" alt="img" class="partners_logo_img"></div>
+                <div class="partners_logo_div">
+                    <img src="images/Layer 28.png" alt="img" class="partners_logo_img"></div>
+            </div>
+            <div class="partners_logo">
+                <div class="partners_logo_div">
+                    <img src="images/Layer 31.png" alt="img" class="partners_logo_img"></div>
+                <div class="partners_logo_div">
+                    <img src="images/Layer 29.png" alt="img" class="partners_logo_img"></div>
+                <div class="partners_logo_div">
+                    <img src="images/Layer 30.png" alt="img" class="partners_logo_img"></div>
+            </div>
+        </div>
+    </div>
+
+    <!-- footer -->
+    <div id="footer">
+        <div class="footer_block">
+            <img src="images/resurs_footer_logo.png" alt="img"></div>
+        <div class="footer_block">
+            <a href="index.html">Механообработка деталей</a>
+            <br>
+            <a href="index.html">Токарные работы</a>
+        </div>
+        <div class="footer_block">
+            <a href="index.html">Фрезеровка деталей</a>
+            <br>
+            <a href="index.html">Фрезерный работы</a>
+        </div>
+        <div class="footer_block">
+            <p>
+                г. Санкт-Петербург, Колпино
+                <br>Ижорский завод, пр. Ленина, д.1</p>
+        </div>
+        <div class="footer_block">
+            <p>8 800 000 00 00</p>
+            <p>НАПИСАТЬ ДИРЕКТОРУ</p>
+        </div>
+    </div>
 </body>
 </html>
