fix js 2 gallery problem

--- a/index.html
+++ b/index.html
@@ -123,22 +123,26 @@
                 <div class="content_right_animation">
                     <p class="content_right_animation_p">НАШЕ ОБОРУДОВАНИЕ</p>
                     <a id="up">
-                        <img src="images/Shape 2.png" alt=""></a>
+                        <img src="images/ShapeUp.png" alt="">
+                    </a>
                     <br>
                     <img src="images/Layer38.png" alt="" id="img">
                     <br>
                     <a id="down">
-                        <img src="images/Shape 2 copy.png" alt=""></a>
+                        <img src="images/ShapeDown.png" alt="">
+                    </a>
                 </div>
                 <div class="content_right_animation">
                     <p class="content_right_animation_p">НАША ПРОДУКЦИЯ</p>
-                    <a id="up">
-                        <img src="images/Shape 2.png" alt=""></a>
+                    <a id="up2">
+                        <img src="images/ShapeUp2.png" alt="">
+                    </a>
                     <br>
-                    <img src="images/Layer39.png" alt="" id="img">
+                    <img src="images/Layer39.png" alt="" id="img2">
                     <br>
-                    <a id="down">
-                        <img src="images/Shape 2 copy.png" alt=""></a>
+                    <a id="down2">
+                        <img src="images/ShapeDown2.png" alt="">
+                    </a>
                 </div>
             </div>
         </div>
@@ -148,7 +152,7 @@
     <div class="gosts">
         <h3 id="gost-caption">ГАРАНТИРУЕМ КАЧЕСТВО ИЗДЕЛИЙ</h3>
         <div id="sertificate">
-            <img src="images/Layer 40.png"  alt="sertificate" id="sertificate-img"></div>
+            <img src="images/Layer40.png"  alt="sertificate" id="sertificate-img"></div>
         <div id="gost-text">
             <img src="images/1.png" alt="img" class="gost-img">
             <img src="images/2.png" alt="img" class="gost-img">
@@ -186,19 +190,19 @@
         <div class="partners">
             <div class="partners_logo">
                 <div class="partners_logo_div">
-                    <img src="images/Layer 26.png" alt="img" class="partners_logo_img"></div>
+                    <img src="images/Layer26.png" alt="img" class="partners_logo_img"></div>
                 <div class="partners_logo_div">
-                    <img src="images/Layer 27.png" alt="img" class="partners_logo_img"></div>
+                    <img src="images/Layer27.png" alt="img" class="partners_logo_img"></div>
                 <div class="partners_logo_div">
-                    <img src="images/Layer 28.png" alt="img" class="partners_logo_img"></div>
+                    <img src="images/Layer28.png" alt="img" class="partners_logo_img"></div>
             </div>
             <div class="partners_logo">
                 <div class="partners_logo_div">
-                    <img src="images/Layer 31.png" alt="img" class="partners_logo_img"></div>
+                    <img src="images/Layer31.png" alt="img" class="partners_logo_img"></div>
                 <div class="partners_logo_div">
-                    <img src="images/Layer 29.png" alt="img" class="partners_logo_img"></div>
+                    <img src="images/Layer29.png" alt="img" class="partners_logo_img"></div>
                 <div class="partners_logo_div">
-                    <img src="images/Layer 30.png" alt="img" class="partners_logo_img"></div>
+                    <img src="images/Layer30.png" alt="img" class="partners_logo_img"></div>
             </div>
         </div>
     </div>
