--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
         <div class="footer_block">
             <p>8 800 000 00 00</p>
             <p>НАПИСАТЬ ДИРЕКТОРУ</p>
+            <!--Test comment-->
         </div>
     </div>
 </body>
